clusters/xs4/kube/oldlab/bitwarden/endpoints.yaml
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "oldlab-bitwarden-service" 
subsets: 
  - addresses:
      - ip: "192.168.80.107" 
    ports:
      - name: "http"
        port: 8080
