clusters/xs4/kube/oldlab/bitwarden/services.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "oldlab-bitwarden-service"
spec:
  ports:
    - name: "http"
      protocol: "TCP"
      port: 80
      targetPort: 8080
