clusters/xs4/kube/oldlab/bitwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oldlab-bitwarden-ingress
  annotations: 
    # Due to global whitelisting we need to override restricted access.
    # To use whitelisting/override global whitelisting use the row below:
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    
    # Lets use letsencrypt
    cert-manager.io/cluster-issuer: "letsencrypt-production"

    # Force SSL
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: bitwarden.groeneveld.xyz
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: oldlab-bitwarden-service
              port:
                number: 80
  tls:
  - hosts:
    - bitwarden.groeneveld.xyz
    secretName: oldlab-bitwarden-tls
